update -> add eda and markdown org

--- a/src/1-data_processing.ipynb
+++ b/src/1-data_processing.ipynb
@@ -1,73 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "294141dd-a2f4-463f-8582-d07caa1f65f7",
+   "metadata": {},
+   "source": [
+    "# Data processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bd1c321-db25-457c-8162-67a786038350",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2ac79a0b212bc449",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.062902Z",
      "start_time": "2024-12-18T00:36:01.028364Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings"
-   ],
-   "id": "2ac79a0b212bc449",
-   "outputs": [],
-   "execution_count": 29
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab7c4215-f962-4a69-83de-52977bb9d013",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "16625f75aa0db4e5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.095635Z",
      "start_time": "2024-12-18T00:36:01.087398Z"
     }
    },
-   "cell_type": "code",
-   "source": "warnings.filterwarnings('ignore')",
-   "id": "16625f75aa0db4e5",
    "outputs": [],
-   "execution_count": 30
+   "source": [
+    "warnings.filterwarnings('ignore')"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bda787e-7e75-4793-a69b-10442661670b",
+   "metadata": {},
+   "source": [
+    "## Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e217e8a8fa57c048",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.248852Z",
      "start_time": "2024-12-18T00:36:01.199838Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "train_data = pd.read_csv('../datasets/train.csv')\n",
-    "train_data.head()"
-   ],
-   "id": "e217e8a8fa57c048",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
-       "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -180,6 +191,28 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
       ]
      },
      "execution_count": 31,
@@ -187,34 +220,37 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "source": [
+    "train_data = pd.read_csv('../datasets/train.csv')\n",
+    "train_data.head()"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9ede375b11bcef8a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.333306Z",
      "start_time": "2024-12-18T00:36:01.325201Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "num_data = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']\n",
     "cat_data = ['Sex', 'Embarked']"
-   ],
-   "id": "9ede375b11bcef8a",
-   "outputs": [],
-   "execution_count": 32
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "39816f86a67225bc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.498718Z",
      "start_time": "2024-12-18T00:36:01.456774Z"
     }
    },
-   "cell_type": "code",
-   "source": "train_data.info()",
-   "id": "39816f86a67225bc",
    "outputs": [
     {
      "name": "stdout",
@@ -242,22 +278,20 @@
      ]
     }
    ],
-   "execution_count": 33
+   "source": [
+    "train_data.info()"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4c7450a52e04d388",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.605861Z",
      "start_time": "2024-12-18T00:36:01.587090Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "train_data.dropna(subset=['Age'], inplace=True)\n",
-    "train_data.drop(columns=['Name', 'Ticket', 'Cabin'], inplace=True)\n",
-    "train_data.info()"
-   ],
-   "id": "4c7450a52e04d388",
    "outputs": [
     {
      "name": "stdout",
@@ -282,40 +316,25 @@
      ]
     }
    ],
-   "execution_count": 34
+   "source": [
+    "train_data.dropna(subset=['Age'], inplace=True)\n",
+    "train_data.drop(columns=['Name', 'Ticket', 'Cabin'], inplace=True)\n",
+    "train_data.info()"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "284c71f394bf596f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.774524Z",
      "start_time": "2024-12-18T00:36:01.752107Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "train_data['SurvivedStr'] = train_data['Survived'].replace({0: \"No\", 1: \"Yes\"})\n",
-    "train_data['FareLog2'] = np.log2(train_data['Fare'])\n",
-    "train_data.head()"
-   ],
-   "id": "284c71f394bf596f",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "   PassengerId  Survived  Pclass     Sex   Age  SibSp  Parch     Fare  \\\n",
-       "0            1         0       3    male  22.0      1      0   7.2500   \n",
-       "1            2         1       1  female  38.0      1      0  71.2833   \n",
-       "2            3         1       3  female  26.0      0      0   7.9250   \n",
-       "3            4         1       1  female  35.0      1      0  53.1000   \n",
-       "4            5         0       3    male  35.0      0      0   8.0500   \n",
-       "\n",
-       "  Embarked SurvivedStr  FareLog2  \n",
-       "0        S          No  2.857981  \n",
-       "1        C         Yes  6.155492  \n",
-       "2        S         Yes  2.986411  \n",
-       "3        S         Yes  5.730640  \n",
-       "4        S          No  3.008989  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -422,6 +441,21 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass     Sex   Age  SibSp  Parch     Fare  \\\n",
+       "0            1         0       3    male  22.0      1      0   7.2500   \n",
+       "1            2         1       1  female  38.0      1      0  71.2833   \n",
+       "2            3         1       3  female  26.0      0      0   7.9250   \n",
+       "3            4         1       1  female  35.0      1      0  53.1000   \n",
+       "4            5         0       3    male  35.0      0      0   8.0500   \n",
+       "\n",
+       "  Embarked SurvivedStr  FareLog2  \n",
+       "0        S          No  2.857981  \n",
+       "1        C         Yes  6.155492  \n",
+       "2        S         Yes  2.986411  \n",
+       "3        S         Yes  5.730640  \n",
+       "4        S          No  3.008989  "
       ]
      },
      "execution_count": 35,
@@ -429,23 +463,22 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 35
+   "source": [
+    "train_data['SurvivedStr'] = train_data['Survived'].replace({0: \"No\", 1: \"Yes\"})\n",
+    "train_data['FareLog2'] = np.log2(train_data['Fare'])\n",
+    "train_data.head()"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2d153eb407d70984",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:01.867628Z",
      "start_time": "2024-12-18T00:36:01.845686Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "survived = train_data.query('Survived==1')\n",
-    "not_survived = train_data.query('Survived==0')\n",
-    "print(survived.shape)\n",
-    "print(not_survived.shape)"
-   ],
-   "id": "2d153eb407d70984",
    "outputs": [
     {
      "name": "stdout",
@@ -456,43 +489,48 @@
      ]
     }
    ],
-   "execution_count": 36
+   "source": [
+    "survived = train_data.query('Survived==1')\n",
+    "not_survived = train_data.query('Survived==0')\n",
+    "print(survived.shape)\n",
+    "print(not_survived.shape)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f4dfa8665603829a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T00:36:02.059248Z",
      "start_time": "2024-12-18T00:36:02.037359Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "train_data.to_csv('../datasets/train_processed.csv', index=False)\n",
     "survived.to_csv('../datasets/survived_processed.csv', index=False)\n",
     "not_survived.to_csv('../datasets/not_survived_processed.csv', index=False)"
-   ],
-   "id": "f4dfa8665603829a",
-   "outputs": [],
-   "execution_count": 37
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
