--- a/src/2-exploratory-data-analysis.ipynb
+++ b/src/2-exploratory-data-analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "54860f9d-a0ae-4bc7-a5ea-cf8274d29106",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8e5e1a9f-c054-4862-adad-8f41dcb4666e",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "271b1f64-0a7d-4ab0-a189-0717f84ebbd1",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        "4        S          No  3.008989  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3dce246e-dcaa-41cb-912e-3d2eac42e0c0",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "4        C         Yes  4.910291  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "78bb442e-ff59-4e17-b4f1-6931e271bc3a",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "4          No  3.008989  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,8 +512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f00cdf75-34de-4cc6-9f32-76b5f8e590d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_data = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']\n",
+    "cat_data = ['Sex', 'Embarked']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e991cb1-8ed1-4d76-b39d-aaf2fbfa1206",
    "metadata": {},
    "outputs": [],
    "source": []
